--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
-html, body, #root {
-    width: 100%;
+html, body {
     height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
+#root {
+    min-height: 100%;
+    background: linear-gradient( 45deg, #DCF0F8, #F7F0DC, #F3ADCF );
 }
